--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "test",
+  "name": "test-package",
   "version": "1.0.0",
   "description": "",
+  "license": "MIT",
+  "author": "",
   "main": "index.js",
   "scripts": {
-    "test": "ndv-scripts test",
-    "build": "ndv-scripts build"
+    "build": "ndv-scripts build",
+    "format": "ndv-scripts format",
+    "lint": "ndv-scripts lint",
+    "test": "ndv-scripts test"
   },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.3.1",
-    "ndv-scripts": "^1.1.13"
+    "@babel/runtime": "^7.3.1"
   },
   "devDependencies": {
-    "typescript": "^3.3.3"
+    "ndv-scripts": "^1.3.0",
+    "typescript": "^3.3.3333"
   }
 }
