--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "build": "easy-scripts build",
+    "build:bundle": "easy-scripts build --bundle",
     "format": "easy-scripts format",
     "lint": "easy-scripts lint",
     "test": "easy-scripts test",
@@ -17,8 +18,7 @@
     "@babel/runtime": "^7.3.1"
   },
   "devDependencies": {
-    "easy-scripts": "^2.2.0",
-    "typescript": "^3.3.3333"
+    "easy-scripts": "^2.2.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/easy-scripts/dist/config/eslintrc.js"
