--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "scripts": {
     "build": "easy-scripts build",
+    "build:bundle": "easy-scripts build --bundle",
     "format": "easy-scripts format",
     "lint": "easy-scripts lint",
     "test": "easy-scripts test",
