--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@babel/runtime": "^7.3.1"
   },
   "devDependencies": {
-    "easy-scripts": "^2.2.0"
+    "easy-scripts": "^2.2.0",
+    "styled-components": "^4.1.3"
+  },
+  "peerDependencies": {
+    "styled-components": "^4.1.3"
   },
   "eslintConfig": {
     "extends": "./node_modules/easy-scripts/dist/config/eslintrc.js"
